# AIrsenal

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  CodingConventions.md  DEAP_IMPLEMENTATION_SUMMARY.md  Dockerfile  FPL_AUTH_WORKAROUND.md  MANIFEST.in  NOTES.md  QUICK_START_AUTH.md  README.md  actual_performance_summary.py  actual_performance_test.py  actual_vs_projected_analysis.py  algorithm_comparison_results.txt  benchmark_results_summary.md  compare_optimizations.py  copilot_chat_1.md  copilot_chat_2.md  deap_improvements_summary.py  deap_parameter_analysis.py  deap_vs_pygmo_comparison.py  docker-compose.yml  environment.yml  extended_analysis.py  extended_comparison.py  extended_performance_test.py  extract_browser_auth.py  final_comparison.py  final_comparison.txt  final_verification.py  minute_performance_test.py  optimise_initial_squad.ipynb  optimization_benchmark.py  optimization_benchmark_20250724_155721.csv  optimization_benchmark_20250724_160449.csv  optimization_summary.py  output.txt  (+19 more)
.github/: copilot-instructions.md  dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: recent_development_template.md
.github/workflows/: attributes.yml  automatic_release.yml  docker-ci.yml  main.yml
airsenal/: __init__.py  bpl_interface.py  conftest.py  data_fetcher.py  fixure.py  fpl_team_utils.py  history_utils.py  mappings.py  prediction_utils.py  schema.py  utils.py
airsenal/api/: app.py  exceptions.py  session_example.py
airsenal/cli/: airsenal_cli.py  apply_changes.py  database.py  optimise.py  pipeline.py  predict.py  utils.py
airsenal/data/: FD_API_KEY  FPL_1718.json  FPL_1819.json  FPL_1920.json  FPL_2021.json  FPL_2122.json  FPL_2223.json  FPL_2324.json  FPL_2425.json  FPL_2526.json  FPL_LEAGUE_ID  Replay_2122_GW1_GW38_202210071157.json  absences_1516.csv  absences_1617.csv  absences_1718.csv  absences_1819.csv  absences_1920.csv  absences_2021.csv  absences_2122.csv  absences_2223.csv  absences_2324.csv  absences_2425.csv  absences_2526.csv  airsenal_gw_2021.json  airsenal_gw_2122.json  airsenal_gw_2223.json  airsenal_gw_2324.json  airsenal_gw_2425.json  airsenal_gw_2526.json  airsenal_history_2021.json  airsenal_history_2122.json  airsenal_history_2223.json  airsenal_history_2324.json  airsenal_history_2425.json  airsenal_history_2526.json  airsenal_transfer_2021.json  airsenal_transfer_2122.json  airsenal_transfer_2223.json  airsenal_transfer_2324.json  airsenal_transfer_2425.json  (+90 more)
airsenal/framework/: FPL_scoring_rules.py  __init__.py  api_utils.py  aws_utils.py  bpl_interface.py  bpl_next_interface.py  data_fetcher.py  db_config.py  env.py  fpl_team_utils.py  history_utils.py  mappings.py  multiprocessing_utils.py  optimization_deap.py  optimization_pygmo.py  optimization_squad.py  optimization_transfers.py  optimization_utils.py  player.py  player_model.py  prediction_utils.py  random_team_model.py  schema.py  season.py  squad.py  team.py  transaction_utils.py  utils.py
airsenal/scraper/: scrape_fpl_archive.py  scrape_understat.py
airsenal/scripts/: activate_assistant_manager.py  airsenal_run_pipeline.py  data_sanity_checks.py  dump_api.py  dump_db_contents.py  duplicate_names.py  fill_absence_table.py  fill_db_init.py  fill_fifa_ratings_table.py  fill_fixture_table.py  fill_match_table.py  fill_player_attributes_table.py  fill_player_mappings_table.py  fill_player_table.py  fill_playerscore_table.py  fill_playerscore_this_season.py  fill_result_table.py  (+35 more)
aws_scripts/: HOWTO_setup_alexa_skill.md  lambda_airsenal_alexa.py  lambda_get_suggestions.py  test_event.json  test_event_2.json  test_event_league.json  test_event_ranking.json  test_event_score.json  test_score_gameweek.json
data/: FPL_2017-18.json  FPL_2018-19.json  FPL_TEAM_ID  player_details_1516.json  player_details_1617.json  player_details_1718.json  player_history_DEF.csv  player_history_FWD.csv  player_history_GK.csv  player_history_MID.csv  player_summary_1516.json  player_summary_1718.json  results_1516.csv  results_1516_with_gw.csv  results_1617_with_gw.csv  results_1718.csv  results_1718_with_gw.csv  results_1819_with_gw.csv  transactions.csv
docs/: DEAP_MIGRATION.md
examples/: deap_optimization_example.py
framework/: aws_utils.py  bpl_interface.py  data_fetcher.py  datastore.py  fixure.py  mappings.py  optimization_utils.py  player.py  prediction_utils.py  schema.py  team.py  utils.py
notebooks/: bonus_points.ipynb  card_points.ipynb  compare_forecasts.ipynb  conjugate_player_model.ipynb  dynamic_model.ipynb  dynamic_model.stan  evaluate_match_predictions_for_season.ipynb  forecast_evaluation.ipynb  historical_mins_with_absences.ipynb  historical_minutes.ipynb  individual_player.stan  injury_scraping.ipynb  match_predictions.ipynb  match_predictions_season.ipynb  match_results_vs_predictions.ipynb  minutes_estimation_data.ipynb  modelling_test.ipynb  numpyro_player_model.ipynb  player_model.ipynb  player_model_plots.ipynb  player_scores_vs_predictions.ipynb  progression_of_attack_parameter.ipynb  replay_season_plots.ipynb  replay_seasons_experiments.ipynb  save_points.ipynb  team_model.ipynb  team_model_bpl_next.ipynb  team_model_checks.ipynb  team_model_fifa_ratings.ipynb  total_saves_bonus_cards.ipynb
sandbox/: bonus_points.ipynb  compare_forecasts.ipynb  dynamic_model.ipynb  dynamic_model.stan  forecast_evaluation.ipynb  modelling_test.ipynb  optimise_initial_squad.ipynb  player_forecasts.stan  player_model.ipynb  save_points.ipynb  team_model.ipynb
scraper/: scrape_fpl_archive.py
scripts/: fill_db.sh  fill_fifa_ratings_table.py  fill_fixture_table.py  fill_match_table.py  fill_player_table.py  fill_playerscore_table.py  fill_playerscore_this_season.py  fill_predictedscore_table.py  fill_transaction_table.py  fill_transfersuggestion_table.py  find_gameweek_for_match.py  make_player_history_table.py  make_results_csv.py  match_player_names.py  match_team_names.py  parallel_fill_transfersuggestions_table.py  parse_fixtures.py  plot_league_standings.py  team_builder.py  team_optimizer.py  update_results_db.py
stan/: player_forecasts.stan
(+30 files in other folders)
